k8s/application/eureka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eureka-server
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    
spec:
  ingressClassName: nginx 
  
  rules:
  - host: discovery.thisjowi.uk
    http:
      paths:
      - path: /discovery
        pathType: Prefix
        backend:
          service:
            name: eureka-server
            port:
              number: 8761
